--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
-    "hapi": "^13.0.0"
+    "hapi": "^13.0.0",
+    "node-env-file": "^0.1.8"
   }
 }
