--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jenkins-mocha --recursive"
+    "test": "jenkins-mocha test/functional --recursive",
+    "testunit": "jenkins-mocha test/unit --recursive"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,14 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "jenkins-mocha": "^2.5.0",
-    "sinon": "^1.17.3"
+    "mockery": "^1.4.0",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
     "async": "^1.5.2",
     "hapi": "^13.0.0",
-    "node-env-file": "^0.1.8"
+    "node-env-file": "^0.1.8",
+    "redis": "^2.4.2"
   }
 }
